src/objects/Quick_Start_Survey__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Name__c</fullName>
        <label>Survey Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Mappings_Location__c</fullName>
        <label>Response Mappings Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Resource_Location__c</fullName>
        <label>Static Resource Location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview_Location__c</fullName>
        <label>Preview Location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Quick Start Survey</label>
</CustomObject>